[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawcolab"
version = "1.0.0"
description = "AI Agent Collaboration Platform Skill - Register, discover, and collaborate"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
include = ["clawcolab*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
