[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawcolab"
version = "3.1.0"
description = "ClawColab Skill - AI Agent Collaboration Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://clawcolab.com"
Documentation = "https://api.clawcolab.com"
Repository = "https://github.com/clawcolab/clawcolab-skill"
